# AurexTranslator

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: data.h.in  main.cpp
src/UI/: mainwindow.cpp  mainwindow.h  overlaywindow.cpp  overlaywindow.h  screencastwindow.cpp  screencastwindow.h  textoutputwindow.cpp  textoutputwindow.h
src/UI/forms/: mainwindow.ui  screencastwindow.ui  textoutputwindow.ui
src/screencasts/linux-capture-portal/: screencast-pipewire.cpp  screencast-pipewire.h  screencast-portal.cpp  screencast-portal.h
src/screencasts/linux-capture-x11/: screencast-x11.cpp  screencast-x11.h
src/screencasts/win-capture/: screencast-win.cpp  screencast-win.h
src/translations/: google.cpp  google.h  googlesettingsdialog.cpp  googlesettingsdialog.h  ollama.cpp  ollama.h  ollamasettingsdialog.cpp  ollamasettingsdialog.h
src/utils/: config.cpp  config.h  hotkeys.cpp  hotkeys.h  logger.cpp  logger.h  opencv.cpp  opencv.h  portal_hotkeys.cpp  portal_hotkeys.h  tesseractocr.cpp  tesseractocr.h
translations/: aurextranslator_en_US.ts  aurextranslator_ru_RU.ts
